project('tileson', 'cpp')

tileson_includes = include_directories('include')

tileson_sources = [
]

tileson_library = library('tileson', sources : tileson_sources, include_directories : tileson_includes)

tileson_dependency = declare_dependency(include_directories : tileson_includes, link_with : tileson_library)
